--- a/cv.html
+++ b/cv.html
@@ -6,6 +6,16 @@
 <link href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap" rel="stylesheet">
 <link href="./css/globalCss.css" rel="stylesheet" type="text/css" />
 <meta charset="utf-8" />
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-141901428-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-141901428-1');
+</script>
+
 </head>
 
 <body>
