--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
     <script
       async
       src="https://www.googletagmanager.com/gtag/js?id=UA-141901428-1"
-    ></script>
+    >
+    </script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag() {
@@ -50,8 +51,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <a href="./index.html" class="navbar-brand" href="./index.html"
-          >Louis Allard |</a
-        >
+          >Louis Allard |</a>
         <div class="collapse navbar-collapse" id="navbarText">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
@@ -77,7 +77,6 @@
         />
       </header>
 
-<<<<<<< HEAD
       <div class="row">
         <div class="col-9 span-1 introduction">
           <p>Bienvenue sur mon Portfolio,</p>
@@ -122,7 +121,6 @@
             contacter facilement.
           </p>
         </div>
-=======
     <div class="row">
       <div class="col-9 span-1 introduction">
         <p>Bienvenue sur mon Portfolio,</p>
@@ -148,7 +146,6 @@
           En bas de cette page, vous trouverez des liens afin de pouvoir me contacter facilement.
         </p>
       </div>
->>>>>>> aea32b6469b7732dd611c1ea9d9bef17c4044506
 
         <div class="col">
           <img
