Add name and title into cv page.

--- a/cv.html
+++ b/cv.html
@@ -65,10 +65,13 @@
 
     <div class="row entete">
       <div class="col-3">
-        <a href="https://www.linkedin.com/in/louis-allard-devweb/" title="Mon profil LikedIn" target="_blank"><img
-            src="pictures/moi.jpg" class="photo" alt="Ma photo" /></a>
-      </div>
+        <a href="https://www.linkedin.com/in/louis-allard-devweb/" title="Mon profil LikedIn" target="_blank">
+          <img
+            src="pictures/moi.jpg" class="photo" alt="Ma photo" />
+          </a>
+        </div>
       <div class="col contactIntro">
+          <span class="titre">Louis Allard / Developpeur web</span>
         <ul>
           <li class="mail">
             <strong>Email :</strong><a href="mailto:la.dewweb@yahoo.com">
