Erease minor conflicts.

--- a/blog.html
+++ b/blog.html
@@ -159,15 +159,10 @@
         <div class="card-body">
           <h5 class="card-title">EasterEggFight</h5>
           <p class="card-text">
-            <<<<<<< HEAD ======= <<<<<<< HEAD >>>>>>> master Pour mon premier
-            hackathon, j'ai réalisé ce jeu de carte. Sur une durée de 24h, moi
-            et mon équipe avons obtenir ce résultat, alors que 1 mois auparavant
-            nous n'avions presque jamais touché à une ligne de code. <<<<<<<
-            HEAD ======= ======= EasterEggFight est le projet de mon premier
-            hackathon, j'ai réalisé ce jeu de carte. Sur une durée de 24h, moi
-            et mon équipe avons obtenir ce résultat, alors que 1 mois auparavant
-            nous n'avions presque jamais touché à une ligne de code. >>>>>>>
-            aea32b6469b7732dd611c1ea9d9bef17c4044506 >>>>>>> master
+            EasterEggFight est le projet de mon premier hackathon, j'ai réalisé
+            ce jeu de carte. Sur une durée de 24h, moi et mon équipe avons
+            obtenir ce résultat, alors que 1 mois auparavant nous n'avions
+            presque jamais touché à une ligne de code.
           </p>
           <p>Cette application a été réalisé en JavaScript avec React.JS</p>
           <p class="card-text">
@@ -215,8 +210,7 @@
             <div class="col-md-6 offset-1 py-2">
               <h6 class="text-uppercase font-weight-bold">
                 Développeur Web en formation permanente. N'hésitez pas à me
-                <<<<<<< HEAD contacter pour parler de vos projets. =======
-                contacter pour discuter de vos projets. >>>>>>> master
+                contacter pour discuter de vos projets.
               </h6>
             </div>
             <div class="col">
