Update cv and replace photoshop image to Redux image.

--- a/cv.html
+++ b/cv.html
@@ -68,9 +68,14 @@
 
         <div id="expsup"></div>
         <p>
-          "Actuellement en formation de développeur web JavaScript et
-          React.Js de la Wild Code School de Lille, je suis disponible à
-          partir de Septembre pour un stage d'une durée de 4 mois."
+          "En fin de formation à la  <a
+          href="https://wildcodeschool.fr/formation-developpeur-web-mobile/"
+          target="_blank"
+          title="Site de la Wild"
+        >
+          Wild Code School</a
+        >, je suis disponible à
+          partir de Septembre pour un CDI, ou un stage de 4 mois, en tant de developpeur web fullstack, en React.JS et Express."
         </p>
       </div>
     </div>
@@ -151,15 +156,15 @@
         </figure>
         <figure class="text-hide">
           <img src="./pictures/node.svg" alt="Node logo" />
-          <figcaption>Node.Js.</figcaption>
+          <figcaption>Node.Js</figcaption>
         </figure>
         <figure class="text-hide">
           <img src="./pictures/reactjs.svg" alt="ReactJs logo" />
-          <figcaption>React.Js.</figcaption>
+          <figcaption>React.Js</figcaption>
         </figure>
         <figure class="text-hide">
-          <img src="./pictures/photoshop.png" alt="Photoshop logo" />
-          <figcaption>Photoshop</figcaption>
+          <img src="./pictures/redux.png" alt="Redux logo" />
+          <figcaption>Redux</figcaption>
         </figure>
       </div>
 
