--- a/cv.html
+++ b/cv.html
@@ -68,14 +68,7 @@
 
         <div id="expsup"></div>
         <p>
-          "En fin de formation à la  <a
-          href="https://wildcodeschool.fr/formation-developpeur-web-mobile/"
-          target="_blank"
-          title="Site de la Wild"
-        >
-          Wild Code School</a
-        >, je suis disponible à
-          partir de Septembre pour un CDI, ou un stage de 4 mois, en tant de developpeur web fullstack, en React.JS et Express."
+        Developpeur web chez <a href="https://get.slaask.com/" target="_blank">Slaask</a>
         </p>
       </div>
     </div>
@@ -84,6 +77,10 @@
     <div id="exp" class="categories liste">
       <h1>Expériences</h1>
       <ul>
+                <li>
+          <strong>En cours Developpeur web stagiaire</strong><br />
+          Stagiaire en developpement web chez <a href="https://get.slaask.com/" target="_blank">Slaask</a>
+        </li>
         <li>
           <strong>2016-2018 Gérant de Alfa-Services</strong><br />
           Entreprise de formations techniques à destination des professionnels.
