--- a/blog.html
+++ b/blog.html
@@ -88,12 +88,8 @@
           <h5 class="card-title">PongGame</h5>
           <p class="card-text">
             Petit projet personnel réalisé en quelques heures. Un classique du
-            jeux vidéo, commercialisé la première fois en 1972, il fut l'un des
+            jeux vidéo; developpé par <a href="https://fr.wikipedia.org/wiki/Allan_Alcorn" target="_blank">Allan Alcorn</a> et commercialisé la première fois en 1972, il fut l'un des
             premier jeux vidéos Arcade commercialisé.
-            <a href="https://fr.wikipedia.org/wiki/Allan_Alcorn" target="_blank"
-              >Allan Alcorn</a
-            >
-            est le développeur.
           </p>
 
           <p>
@@ -101,14 +97,13 @@
             fonctionnement de la librairie CANVAS.
           </p>
           <p class="card-text">
-            Pong a été développé en JavaScript avec la librairie CANVAS.
+            Pong a été développé en JavaScript Vanilla avec la librairie CANVAS.
           </p>
           <p class="card-text">
-            <small class="text-muted"
-              ><a href="https://kind-borg-d58179.netlify.com" target="_blank"
-                >Accéder au site</a
-              ></small
-            >
+            <small class="text-muted">
+              <a href="https://kind-borg-d58179.netlify.com" target="_blank">
+                Accéder au site
+                </a ></small>
           </p>
         </div>
       </div>
@@ -124,29 +119,18 @@
         <div class="card-body">
           <h5 class="card-title">Watcha</h5>
           <p class="card-text">
-            Second Projet réalisé au sein de la Wild Code School, de avril à mai
-            2019. Watcha, réalisé en équipe de 5 sur une période de deux mois
-            utilise une API permettant de récupérer des élèments de films (BA,
-            synopsis etc.). Il permet de retrouver un film, via un moteur de
-            recherche, par son titre; cliquer sur un acteur renvoi à la liste de
-            ses films; les films peuvent être ajoutés à une liste de favoris,
-            liste que l'on peut retrouver dans le menu "liste".
+            Second Projet réalisé au sein de la Wild Code School, de avril à mai 2019. Watcha, réalisé en équipe de 5 sur une période de deux mois, utilise une API permettant de récupérer des données de films (BA,synopsis etc.). Il permet de retrouver un film, via un moteur de recherche, par son titre; cliquer sur un acteur renvoi à la liste de ses films; les films peuvent être ajoutés à une liste de favoris, liste que l'on peut retrouver dans le menu "liste".
           </p>
           <p>
             Un lien dans le footer présente succintement l'équipe de
             developpement.
           </p>
           <p class="card-text">
-            Outre l'API, Watcha a été développé en JavaScript et React.JS.
+            Outre l'API, Watcha a été développé en React.JS.
           </p>
           <p class="card-text">
-            <small class="text-muted"
-              ><a
-                href="https://upbeat-lumiere-02bb22.netlify.com/"
-                target="_blank"
-                >Accéder au site</a
-              ></small
-            >
+            <small class="text-muted"><ahref="https://upbeat-lumiere-02bb22.netlify.com/"
+                target="_blank">Accéder au site</a></small>
           </p>
         </div>
       </div>
@@ -154,8 +138,7 @@
       <div class="card mb-3">
         <a href="https://nervous-minsky-7b53b9.netlify.com/" target="_blank"
           ><img class="card-img-top" src=./pictures/hackathon1.png
-          alt="hakcathon1" title="Cliquer pour accéder" /></a
-        >
+          alt="hakcathon1" title="Cliquer pour accéder" /></a>
         <div class="card-body">
           <h5 class="card-title">EasterEggFight</h5>
           <p class="card-text">
@@ -166,13 +149,8 @@
           </p>
           <p>Cette application a été réalisé en JavaScript avec React.JS</p>
           <p class="card-text">
-            <small class="text-muted"
-              ><a
-                href="https://nervous-minsky-7b53b9.netlify.com/"
-                target="_blank"
-                >Accéder au site</a
-              ></small
-            >
+            <small class="text-muted">
+              <a href="https://nervous-minsky-7b53b9.netlify.com/" target="_blank">Accéder au site</a></small>
           </p>
         </div>
       </div>
@@ -191,22 +169,15 @@
             Lille. Ce site est codé en HTML/CSS uniquement.
           </p>
           <p class="card-text">
-            <small class="text-muted"
-              ><a
-                href="https://suspicious-keller-31c447.netlify.com/"
-                target="_blank"
-                >Accéder au site</a
-              ></small
-            >
+            <small class="text-muted"><a href="https://suspicious-keller-31c447.netlify.com/"
+                target="_blank">Accéder au site</a></small>
           </p>
         </div>
       </div>
 
       <footer class="page-footer font-small allFooter">
         <div class="footerContainer">
-          <div
-            class="row text-center d-flex justify-content-center pt-5 mb-3 footer"
-          >
+          <div class="row text-center d-flex justify-content-center pt-5 mb-3 footer">
             <div class="col-md-6 offset-1 py-2">
               <h6 class="text-uppercase font-weight-bold">
                 Développeur Web en formation permanente. N'hésitez pas à me
@@ -215,30 +186,13 @@
             </div>
             <div class="col">
               Contact =>
-              <a
-                href="https://github.com/Louis-Allard?tab=repositories"
-                target="_blank"
-                ><img
-                  src="pictures/github.ico"
-                  alt="mon github"
-                  title="Mon GitHub"
-              /></a>
-              <a
-                href="https://www.linkedin.com/in/louis-allard-devweb/"
-                target="_blank"
-                ><img
-                  class="likedin"
-                  src="./pictures/likedin.png"
-                  alt="mon LikedIn"
-                  title="Mon LinkeDin"
-              /></a>
-              <a href="mailto:la.devweb@yahoo.com" target="_blank"
-                ><img
-                  class="contact"
-                  src="./pictures/contact.png"
-                  alt="mon Email"
-                  title="Email"
-              /></a>
+              <a href="https://github.com/Louis-Allard?tab=repositories" target="_blank">
+                <img src="pictures/github.ico" alt="mon github" title="Mon GitHub" /></a>
+              <a href="https://www.linkedin.com/in/louis-allard-devweb/" target="_blank">
+                <img class="likedin" src="./pictures/likedin.png" alt="mon LikedIn" title="Mon LinkeDin"/></a>
+              <a href="mailto:la.devweb@yahoo.com" target="_blank">
+                <img class="contact" src="./pictures/contact.png" alt="mon Email" title="Email"/>
+              </a>
             </div>
           </div>
           <hr class="rgba-white-light" style="margin: 0 10%;" />
