--- a/cv.html
+++ b/cv.html
@@ -174,6 +174,7 @@
           <li>Littérature</li>
           <li>Musique</li>
           <li>Informatique</li>
+          <li>Airsoft</li>
         </ul>
       </div>
 
