--- a/index.html
+++ b/index.html
@@ -82,21 +82,9 @@
         <div class="col-9 span-1 introduction">
           <p>Bienvenue sur mon Portfolio,</p>
           <p>
-            Après différentes expériences dans le monde du web, j'ai intégré la
-            <a
-              href="https://wildcodeschool.fr/formation-developpeur-web-mobile/"
-              target="_blank"
-              title="Site de la Wild"
-            >
-              Wild Code School</a
-            >
-            de Lille afin de me perfectionner dans le developpement, en
-            JavaScript et React.JS.
-          </p>
+            Après différentes expériences dans le monde du web, intégrant une formation à la <b> Wild Code School</b> de Lille, j'ai acquis des compétences certaines en React.JS, Vue.JS, Node.JS.</p>
           <p>
-            Conscient des apports du developpement web dans les domaines les
-            plus innovants, je souhaiterais m'investir dans des projets me
-            permettant de rester au coeur de l'actualité de mon métier.
+            Conscient des apports du developpement web dans les domaines les plus innovants, je souhaiterais m'investir dans des projets me permettant de rester au coeur de l'actualité de mon métier. Envi d'en parler ? Un projet en cours ? Je suis disponible très facilement via les liens en bas de cette page.
           </p>
           <p>
             Vous trouverez mon cv en cliquant juste ici :
@@ -116,10 +104,6 @@
               >GitHub</a
             >
             afin de pouvoir suivre mes différents projets.
-          </p>
-          <p>
-            En bas de cette page, vous trouverez des liens afin de pouvoir me
-            contacter facilement.
           </p>
         </div>
     <div class="row">
