Add VueJS into cv page.

--- a/cv.html
+++ b/cv.html
@@ -163,6 +163,10 @@
           <img src="./pictures/redux.png" alt="Redux logo" />
           <figcaption>Redux</figcaption>
         </figure>
+        <figure class="text-hide">
+          <img src="./pictures/vuejs.png" alt="VueJS logo" />
+          <figcaption>Vue JS</figcaption>
+        </figure>
       </div>
 
       <div id="inter" class="categories">
