--- a/cv.html
+++ b/cv.html
@@ -155,6 +155,10 @@
           <img src="./pictures/node.svg" alt="Node logo" />
           <figcaption>Node.Js</figcaption>
         </figure>
+           <figure class="text-hide">
+          <img src="./pictures/rails-logo.svg" alt="Ruby logo" />
+          <figcaption>Ruby On Rails</figcaption>
+        </figure>     
         <figure class="text-hide">
           <img src="./pictures/reactjs.svg" alt="ReactJs logo" />
           <figcaption>React.Js</figcaption>
