--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <div class="col-9 span-1 introduction">
           <p>Bienvenue sur mon Portfolio,</p>
           <p>
-            Après différentes expériences dans le monde du web, intégrant une formation à la <b> Wild Code School</b> de Lille, j'ai acquis des compétences certaines en React.JS, Vue.JS, Node.JS.</p>
+            Après différentes expériences dans le monde du web, intégrant une formation à la <b> Wild Code School</b> de Lille, j'ai acquis des compétences certaines en React.JS et Node.JS, complétés par VueJS et RubyOnRails.</p>
           <p>
             Conscient des apports du developpement web dans les domaines les plus innovants, je souhaiterais m'investir dans des projets me permettant de rester au coeur de l'actualité de mon métier. Envi d'en parler ? Un projet en cours ? Je suis disponible très facilement via les liens en bas de cette page.
           </p>
