--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./cv.html">Mon C.V </a>
+              <a class="nav-link" href="https://cvdesignr.com/p/5e415998a2cbb?hl=fr_FR" target="_blank">Mon C.V </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./blog.html">Mes projets</a>
