Add my cv link.

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="https://cvdesignr.com/p/5e415998a2cbb?hl=fr_FR" target="_blank">Mon C.V </a>
+              <a class="nav-link" href="./cv.html" target="_parent">Mon C.V </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./blog.html">Mes projets</a>
@@ -87,8 +87,8 @@
             Conscient des apports du developpement web dans les domaines les plus innovants, je souhaiterais m'investir dans des projets me permettant de rester au coeur de l'actualité de mon métier. Envi d'en parler ? Un projet en cours ? Je suis disponible très facilement via les liens en bas de cette page.
           </p>
           <p>
-            Vous trouverez mon cv en cliquant juste ici :
-            <a href="cv.html" target="_parent">
+            Vous trouverez mon cv sous format PDF en cliquant juste ici :
+            <a href="https://cvdesignr.com/p/5e415998a2cbb?hl=fr_FR" target="_blank">
               <img
                 src="./pictures/cv.jpg"
                 alt="Mon cv"
